@@ -6,6 +6,7 @@ version 2.0.14:
 	- [eval] better help
 	- [eval] last result (symbol _)
 	- [eval] u8, u16 etc. for current byte, word..
+	- fixed embarrassing endianess bug
 
 version 2.0.13:
 	- [win32] optimize redrawing (reduce flicker)
